project/test/semantics/unit/bad/Bad20_shouldThrowIllegalSideEffectsErrorForMethodArguments.ty
mutable class SomeMutableClass {

    values: {
        total: Int;
        count: Int;
        name: String = "Some name";
    }
    
    variables: {
        var1: Int = 1;
        var2: String = "S";
    }
    
    functions: {
        goodFunction: (x: Int) -> Int = x + 50
    }
    
    actions: {
        goodAction: (x: Int, y: String) -> Int = {
            val z: Int = 4;
            z
        }
        
        
        badAction: (x: Int, y: String, z: Int) -> Int = {
            val k: Int = 8;
            this.goodFunction(this#goodAction(3, "OK"))
        }
    }
}

singleton class Main {
    
    actions: {
        main: () -> Void = Pass
    }
}
